Add tracking script to index.html

--- a/index.html
+++ b/index.html
@@ -227,5 +227,6 @@ Tudo pronto? Salve na MEMÓRIA.
         alert('Prompt LITE v1.0 Copiado! Agora, envie o texto copiado para a sua IA (ChatGPT, Gemini, Claude) para iniciar a sua carreira.');
     });
 </script>
+    <script>(function(s){s.dataset.zone='10392610',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 </body>
 </html>
