Add external script for additional functionality

--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@ Tudo pronto? Salve na MEMÓRIA.
         alert('Prompt LITE v1.0 Copiado! Agora, envie o texto copiado para a sua IA (ChatGPT, Gemini, Claude) para iniciar a sua carreira.');
     });
 </script>
+    <script async="async" data-cfasync="false" src="https://pl28360775.effectivegatecpm.com/f58217bbb3e0822b122a64fc83cf8c92/invoke.js"></script>
+<div id="container-f58217bbb3e0822b122a64fc83cf8c92"></div>
     <script>(function(s){s.dataset.zone='10392610',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 </body>
 </html>
